# factorio-assignment-kawaljeet

./: CMakeLists.txt
part2_assignment/: CMakeLists.txt  README.md  RUN.md
part2_assignment/belts/: CMakeLists.txt  main.cpp
part2_assignment/factory/: CMakeLists.txt  main.cpp
